# pre-commit-terraform-modules

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup.cfg
.github/workflows/: pre-commit.yaml
pre_commit_hooks/: copy_root_outputs.py  module_dirs.py  update_readme_toc_modules.py  update_tf_docs.py
