[metadata]
name = pre_commit_terraform_modules
version = 1.0.0
description = Pre-Commit hooks for Terraform Modules
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pre-commit/pre-commit-hooks
author = Ben Wart
author_email = benwart@duck.com
license = Apache-2.0
license_file = LICENSE
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    ruamel.yaml==0.17.21
python_requires = >=3.11

[options.entry_points]
console_scripts =
    copy-root-outputs = pre_commit_hooks.copy_root_outputs:main
    update-tf-docs = pre_commit_hooks.update_tf_docs:main
    update-readme-toc-modules = pre_commit_hooks.update_readme_toc_modules:main
    module-dirs = pre_commit_hooks.module_dirs:main

[bdist_wheel]
universal = True

[flake8]
max-line-length = 119
